
2004-04-26  Thomas Heller  <theller@python.net>

	* (Message): Add flush() methods to the Blackhole and Stderr
	objects for windows programs.


2004-04-18  Mark Hammond
	
	* (build_exe.py): Patch sys.winver in the distributed
	pythonxx.dll, so that there is no possibility of conflicts with
	existing distributions and the registry keys found there.  Of
	note, ActivePython/old win32all versions registered 'Modules', and
	these were used in preference to the one shipped with py2exe,
	generally causing problem.

2004-04-07  Thomas Heller  <theller@python.net>

	* (EXCLUDED_DLLS): Readded the builtin list of system dlls to
	exclude.

2004-03-23  Thomas Heller  <theller@python.net>

	* source\py2exe_util.c: The code was calling CreateFileW directly
	instead of the function in unicows.dll, this had the effect that
	the icons could not be changed on Win98.

2004-03-12  Thomas Heller  <theller@python.net>

	* py2exe\resources\VersionInfo.py: Version resource built by
	py2exe was wrong: found by Roger Upole, reported on c.l.p

2004-03-02  Thomas Heller  <theller@python.net>

	* py2exe\boot_service.py: Print a message when a service exe is
	started from the command line.

	* py2exe\build_exe.py: makepy code generation with bForDemand=True is buggy.
	Use bForDemand=False instead.
	

2004-02-17  Thomas Heller  <theller@python.net>

	* source\start.c (init_with_instance): Fixed a bufferoverflow when
	the exe is run in a directory with a long name, found by Ralf Sieger.
	http://sourceforge.net/tracker/index.php?func=detail&aid=893310&group_id=15583&atid=115583

	* py2exe\boot_common.py: Fix two problems found by Mathew
	Thornley: Could not open the logfile because the 'sys' symbol was
	no longer defined. Wrong wording when the logfile could not be
	opened.
	http://sourceforge.net/tracker/index.php?func=detail&aid=887856&group_id=15583&atid=115583
	http://sourceforge.net/tracker/index.php?func=detail&aid=887855&group_id=15583&atid=115583
	